2009-01-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for Oracle 11.1.0.7.0 instant
	    client rpm package. The directory tree is a bit different
	    with that of 11.1.0.6.0 or earlier.
	    (reported by Luis Parravicini.)

2009-01-31  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: renamed to lib/dbd/OCI8.rb.
	* lib/dbd/OCI8.rb: 1. renamed from lib/DBD/OCI8/OCI8.rb
	    2. fix USED_DBD_VERSION from 0.2 to 0.4.
	    3. add DBI::DBD::OCI8.driver_name
	    (changes for ruby-dbi 0.4 contributed by James Cao.)

2009-01-13  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in, lib/oci8/encoding-init.rb: (ruby 1.9) set
	    OCI8.encoding by querying NLS_LANG. If DEFAULT_OCI8_ENCODING
	    is defined, use it by default.
	* lib/oci8/encoding.yml: (ruby 1.9) add a new file containing
	    mapping table from Oracle characterset name to Ruby encoding
	    name.

2009-01-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c: (ruby 1.9) add OCI8.encoding and
	    OCI8.encoding= to get and set the encoding of the Oracle
	    library.
	* ext/oci8/oci8.h: (ruby 1.9) add macros OCI8StringValue
	    and OCI8SafeStringValue which convert the string encoding
	    to Oracle librarie's encoding.
	* ext/oci8/oci8.c: OCI8.new raise a SecurityError when specified
	    connect string is tainted and $SAFE >= 1.
	* ext/oci8/stmt.c: OCI8#parse raise a SecurityError when specified
	    SQL statemenet is tainted and $SAFE >= 1.
	* ext/oci8/metadata.c: OCI8#describe_* raise a SecurityError
	    when the object name to be described is tainted and $SAFE >= 1.
	* ext/oci8/lob.c: OCI8::BFILE.new, OCI8::BFILE#dir_alias= and
	    OCI8::BFILE#filename= raise a SecurityError when specified
	    dir_alias or filename is tainted and $SAFE >= 1.
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c,
	  ext/oci8/object.c, ext/oci8/oci8lib.c, ext/oci8/ocinumber.c:
	    (ruby 1.9) converts encoding from/to OCI.encoding.

2009-01-11  KUBO Takehiro  <kubo@jiubao.org>