@@ -1,3 +1,10 @@
+2009-02-01  KUBO Takehiro  <kubo@jiubao.org>
+	* lib/dbd/OCI8.rb: add code for ruby-dbi 0.4 type conversion.
+	* test/test_dbi.rb: suppress deprecated warnings while running
+	    test_bind_dbi_data_type.
+	* test/test_dbi_clob.rb: fix a problem when running this
+	    file directly.
+
 2009-01-31  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: fix for Oracle 11.1.0.7.0 instant
 	    client rpm package. The directory tree is a bit different
